--- a/code/style.css
+++ b/code/style.css
@@ -403,6 +403,7 @@ background-color: rgb(0, 0, 0);
 
 .video-section {
     height: 1500px;
+    width: 70%;
     margin: 10px 15%;
     display: grid;
     gap: 20px;
@@ -410,18 +411,20 @@ background-color: rgb(0, 0, 0);
     grid-template-rows: 1fr 1fr 1fr;  
   }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 767px) {
   .video-section {
     height: 2500px;
     grid-template-columns: 1fr;
-    grid-template-rows: 2fr 1fr 2fr 1fr 2fr 1fr;  
-    margin: 10px 10%;
+    grid-template-rows: 400px 200px;
     gap: 10px;
     font-size: 0.7em;
+    width: 90%;
+    align-self: center;
+    margin: 20px 0;
   }
 }
 
-@media only screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .video-section {
     height: 1000px;
     margin: 10px 15%;
@@ -433,6 +436,7 @@ background-color: rgb(0, 0, 0);
 }
 
 
+
 .instruction-video {
   background-color: rgb(185, 93, 81);
 }
@@ -440,8 +444,14 @@ background-color: rgb(0, 0, 0);
 .instruction-video iframe {
   height: 100%;
   width: 100%;
-
 }
+
+@media screen and (max-width: 767px) {
+  .instruction-video {
+    height: 300px;
+  }
+  }
+  
 
 .video-text {
  border: 1px solid;
@@ -526,6 +536,7 @@ background-color: rgb(0, 0, 0);
   bottom: 0;
   width: 100%;
   height: 150px;
-  margin-top: 20px;
+  margin-top: 500px;
+  display: inline-block;
   }
   
