--- a/code/style.css
+++ b/code/style.css
@@ -536,7 +536,12 @@ background-color: rgb(0, 0, 0);
   bottom: 0;
   width: 100%;
   height: 150px;
-  margin-top: 500px;
   display: inline-block;
+  margin-top: 40px;
   }
   
+  @media screen and (max-width: 676px) {
+    .footer {
+    margin-top: 500px;
+    }
+  }
