--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,753 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+    background: #f4efea;
+    color: rgb(92, 64, 49);
+    font-family: serif;
+    justify-content: center;
+  }
+
+html a{
+    text-decoration: none;
+    color: #3f3524;
 }
+
+html a:hover{
+        color: #ae9990;
+    }
+
+
+
+ /* --------- START OF HEADER SECTION ---------- */
+
+header {
+.headerimage{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+
+}
+    /* MOBILE */
+@media (max-width: 480px){
+    .headerimage{
+        padding-top: 30px;
+        width: 18rem;
+        margin-left: 35px;
+        margin-bottom: 20px;
+        }
+} 
+
+/* TABLET */
+@media (min-width: 481px) AND (max-width: 1024px){
+    .headerimage{
+        padding-top: 30px;
+        width: 40rem;
+        }
+
+}
+/* DESKTOP */
+@media (min-width: 1025px){
+    .headerimage{
+        padding-top: 30px;
+
+        }
+} 
+}
+
+/*MOBILE*/
+
+@media (max-width: 480px){
+/* Style the navigation menu */
+.top-nav {
+    overflow: hidden;
+    padding-right: 200px;   
+   
+  }
+  
+
+  .top-nav #myLinks {
+    display: none;
+  }
+  
+  .top-nav a {
+    color:#3f3524;
+    padding: 17px 12px;
+    text-decoration: none;
+    font-size: 14px;
+    display: block;
+    
+  }
+  
+
+  .top-nav a.icon {
+    display: block;
+    position: absolute;
+    font-size: 20px;
+    top: 0;
+  }
+  
+ 
+  .top-nav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  .top-nav-list a:hover {
+    background-color: #dbd5cf;
+    color: #ae9990;
+  }
+  
+  
+  .top-nav-list {
+    background-color: #f4efea;
+    list-style: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
+    width: 300px;
+  
+  }
+
+}
+
+
+
+/* TABLET */
+@media (min-width: 481px) AND (max-width: 1024px){
+
+.icon{
+        display: none;
+    }
+
+.top-nav-list{
+    text-align: center;
+    margin: 20px;
+    padding-top: 8px;
+    padding-bottom: 10px;
+    padding-right: 40px;
+    border-style: solid;
+    border-left: none;
+    border-right: none;
+
+    
+    
+
+}  
+    
+.top-nav-list a{
+    text-decoration: none;
+    color: #3f3524;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
+    list-style: none;
+    font-size: 12pt;
+      
+    }
+    .top-nav-list li{
+    display: inline;
+    margin: 8px;
+    
+      }
+      
+    .top-nav-list a:hover{
+      color: #cebfb4;
+      border-color: #f4efea;
+      border-style: solid;
+      padding-top: 5px;
+      padding-bottom: 10px;
+      border-left: none;
+      border-right: none;
+    }
+
+}
+
+/* DESKTOP */
+@media (min-width: 1025px){
+
+.icon{
+    display: none;
+}
+    .top-nav-list{
+        text-align: center;
+        margin: 40px;
+        padding-top: 8px;
+        padding-bottom: 10px;
+        border-style: solid;
+        border-left: none;
+        border-right: none;
+    
+    }  
+        
+    .top-nav-list a{
+        text-decoration: none;
+        color: #3f3524;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
+        list-style: none;
+        font-size: 12pt;
+          
+        }
+        .top-nav-list li{
+        display: inline;
+        margin: 35px;
+        
+          }
+          
+        .top-nav-list a:hover{
+          color: #cebfb4;
+          border-color: #f4efea;
+          border-style: solid;
+          padding-top: 8px;
+          padding-bottom: 10px;
+          border-left: none;
+          border-right: none;
+        }
+    
+    
+} 
+
+/* --------- END OF HEADER SECTION ---------- */
+
+
+
+/* --------- START OF NEWS SECTION ---------- */
+    
+/* MOBILE */
+@media (max-width: 480px){
+ 
+.grid-parent-head-news {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(1, 440px);
+    gap:5px;
+    width: 300px;
+    margin-left: 1px;
+    margin-right: 1px;
+    padding-left: 30px;
+    padding-right: 20px;
+    margin-bottom:30px;
+    justify-content: center;
+   
+}
+  
+
+
+.grid-parent-head-news a{
+    text-decoration: none;
+    color: #3f3524;
+}
+
+
+
+.head-news-headline {
+    font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-style: italic;
+    font-weight: bold;
+    margin-top: -230px;
+    font-size: 20px;
+    color: #3f3524;
+}
+.head-news-intro {
+    font-size: 17px;
+
+}
+
+.head-news-img {
+    grid-column: span 1;
+    margin-top: 10px;
+    display: flex;
+    width: 310px;
+    height: 200px;
+
+    
+}
+
+
+.head-news-text{
+    grid-column: span 1;
+    
+}
+
+.head-news-read {
+    font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 20px;
+    padding-top: 13px;
+    font-weight: bold;
+}
+
+.grid-parent-news a:hover{
+    color: #ae9990;
+}
+
+
+
+.grid-parent-news {
+    display: grid;
+    grid-template-columns: repeat(1, 310px);
+    grid-template-rows: repeat(10, 360px);
+    gap:20px;
+    max-width: 300px;
+    margin-left: 30px;
+    margin-right: 10px;
+    margin-top: 50px;
+    
+}
+
+    
+
+  
+.grid-item {
+        padding:20px;   
+        box-shadow: 0 5px 10px rgba(102, 94, 90, 0.3);
+       font-size: 16.5px;
+       
+        
+}
+.grid-item a{
+    text-decoration: none;
+    color: #3f3524;
+}
+
+
+
+.big-grid-item-right {
+    grid-column: span 1;
+    grid-row: span 2;
+    font-size: 34px;
+    font-weight: bold;
+    font-style: italic;
+    grid-template-areas: "left right"; 
+    grid-template-columns: auto auto;
+}
+    .big-grid-item-right a{
+        text-decoration: none;
+        color: #3f3524;
+    }
+
+.big-grid-item-left {
+    grid-column: span 1;
+    grid-row: span 2;
+    text-align: left;
+    font-size: 36px;
+    font-weight: bold;
+    font-style: italic;
+    padding-right: 40px;
+
+    grid-template-areas: "left right"; 
+    grid-template-columns: auto auto;
+    
+}
+
+
+.big-grid-item-left-img {
+    padding-left: 25px;
+    
+}
+    
+
+} 
+
+
+
+/* TABLET */
+
+@media (min-width: 481px) AND (max-width: 1024px){
+
+    .grid-parent-head-news {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(1, 410px);
+        gap: 30px;
+        max-width: 1024px;
+        margin-left: 50px;
+        margin-right: 50px;
+        border-style: solid;
+        border-top: none;
+        border-bottom: none;
+        padding-left: 50px;
+        padding-right: 50px;
+        margin-bottom:30px;
+        justify-content: center;
+        
+    }
+      
+    
+    .grid-parent-head-news a{
+        text-decoration: none;
+        color: #3f3524;
+    }
+    
+    
+    
+    .head-news-headline {
+        font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-style: italic;
+        font-weight: bold;
+        margin-top: -10px;
+        font-size: 26px;
+        color: #3f3524;
+    }
+    .head-news-intro {
+        font-size: 22px;
+        margin-top: -20px;
+    }
+    
+    .head-news-img {
+        grid-column: span 1;
+        margin-top: 20px;
+        display: flex;
+        padding-left: 20px;
+       
+    }
+    
+    
+    .head-news-text{
+        grid-column: span 2;
+        padding-left: 20px;
+        margin-top: -30px;
+    }
+    
+    .head-news-read {
+        font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-size: 20px;
+       
+        font-weight: bold;
+        margin-top: 20px;
+    }
+    
+    .grid-parent-news a:hover{
+        color: #ae9990;
+    }
+    
+    
+    
+    .grid-parent-news {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 350px);
+        gap: 50px;
+        max-width: 1024px;
+        margin-left: 60px;
+        margin-right: 60px;
+        margin-top: 50px;
+        justify-content: center;
+        
+    }
+    
+        
+      
+    .grid-item {
+            padding: 20px;   
+            box-shadow: 0 5px 10px rgba(102, 94, 90, 0.3);
+           font-size: 16.5px;
+            
+    }
+    .grid-item a{
+        text-decoration: none;
+        color: #3f3524;
+    }
+    
+    
+    
+    .big-grid-item-right {
+        grid-column: span 2;
+        display: grid;
+        text-align: right;
+        font-size: 34px;
+        font-weight: bold;
+        font-style: italic;
+        grid-gap: 10px 5px;
+        grid-template-areas: "left right"; 
+        grid-template-columns: auto auto;
+    }
+        .big-grid-item-right a{
+            text-decoration: none;
+            color: #3f3524;
+        }
+    
+    .big-grid-item-right-img {
+        padding-left: 25px;
+    }
+    
+    .big-grid-item-left {
+        grid-column: span 2;
+        display: grid;
+        text-align: left;
+        font-size: 36px;
+        font-weight: bold;
+        font-style: italic;
+        padding-right: 40px;
+        grid-gap: 10px 5px;
+        grid-template-areas: "left right"; 
+        grid-template-columns: auto auto;
+        
+    }
+    
+    
+    .big-grid-item-left-img {
+        padding-right: 25px;
+    }
+    
+
+}
+
+
+/* DESKTOP */
+
+@media (min-width: 1025px){
+
+    .grid-parent-head-news {
+        display: grid;
+        grid-template-columns: repeat(4, 2fr);
+        grid-template-rows: repeat(1, 410px);
+        gap: 30px;
+        max-width: 1550px;
+        margin-left: 100px;
+        margin-right: 100px;
+        border-style: solid;
+        border-top: none;
+        border-bottom: none;
+        padding-left: 40px;
+        padding-right: 40px;
+        margin-bottom:30px;
+        
+        
+    }
+      
+    
+    
+    .grid-parent-head-news a{
+        text-decoration: none;
+        color: #3f3524;
+    }
+
+    
+    .head-news-text{
+        grid-column: span 2;
+
+    }
+    
+    .head-news-headline {
+        
+        font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-style: italic;
+        font-weight: bold;
+        margin-top: -10px;
+        font-size: 30px;
+        color: #3f3524;
+    }
+    .head-news-intro {
+        font-size: 23px;
+        margin-top: -20px;
+    }
+    
+    .head-news-img {
+        grid-column: span 2;
+        margin-top: 25px;
+        display: inline;
+       
+        
+       
+    }
+
+   
+    
+    .head-news-read {
+        font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-size: 20px;
+        padding-top: 13px;
+        font-weight: bold;
+    }
+    
+    .grid-parent-news a:hover{
+        color: #ae9990;
+    }
+    
+    
+    
+    .grid-parent-news {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 350px);
+        gap: 50px;
+        max-width: 1600px;
+        margin-left: 60px;
+        margin-right: 60px;
+        margin-top: 50px;
+        align-items: center;
+    }
+    
+        
+    
+      
+    .grid-item {
+            padding: 20px;   
+            box-shadow: 0 5px 10px rgba(102, 94, 90, 0.3);
+           font-size: 16.5px;
+            
+    }
+    .grid-item a{
+        text-decoration: none;
+        color: #3f3524;
+    }
+    
+    
+    
+    .big-grid-item-right {
+        grid-column: span 2;
+        display: grid;
+        text-align: right;
+        font-size: 34px;
+        font-weight: bold;
+        font-style: italic;
+        grid-gap: 10px 5px;
+        grid-template-areas: "left right"; 
+        grid-template-columns: auto auto;
+    }
+        .big-grid-item-right a{
+            text-decoration: none;
+            color: #3f3524;
+        }
+    
+    .big-grid-item-right-img {
+        padding-left: 25px;
+    }
+    
+    .big-grid-item-left {
+        grid-column: span 2;
+        display: grid;
+        text-align: left;
+        font-size: 36px;
+        font-weight: bold;
+        font-style: italic;
+        padding-right: 40px;
+        grid-gap: 10px 5px;
+        grid-template-areas: "left right"; 
+        grid-template-columns: auto auto;
+        
+    }
+    
+    
+    .big-grid-item-left-img {
+        padding-right: 25px;
+    }
+    
+
+}
+
+
+/* --------- END OF NEWS SECTION ---------- */
+
+
+/* --------- START OF FOOTER SECTION ---------- */
+
+footer{
+
+/* MOBILE */
+@media (max-width: 480px){
+    .copyright{
+    background-color: #e3dcd5;
+    margin-left: -10px;
+    margin-right: -20px;
+    margin-bottom: -10px;
+    margin-top:30px;
+    padding-right: 20px;
+   width: 100%;
+
+
+     .technigo img{
+        width: 70px;
+        display: flex;
+        justify-content: right;
+        margin-top: -20px;
+      }
+      
+    .text {
+        display: flex;
+        justify-content: space-evenly;
+        padding-top: 40px;
+        margin-bottom: -45px;
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 12px;
+        font-weight: bold;
+    
+      }
+    } 
+ 
+    }
+
+
+/* TABLET */
+@media (min-width: 481px) AND (max-width: 1024px){
+    .copyright{
+    background-color: #e3dcd5;
+    margin-left: -10px;
+    margin-right: -20px;
+    margin-bottom: -10px;
+    margin-top:30px;
+    padding-right: 20px;
+   width: 100%;
+
+
+     .technigo img{
+        width: 70px;
+        display: flex;
+        justify-content: right;
+        margin-top: -20px;
+      }
+      
+    .text {
+        display: flex;
+        justify-content: space-evenly;
+        padding-top: 40px;
+        margin-bottom: -45px;
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 12px;
+        font-weight: bold;
+    
+      }
+    } 
+ 
+    }
+
+/* DESKTOP */
+@media (min-width: 1025px){
+    .copyright{
+    background-color: #e3dcd5;
+    margin-left: -10px;
+    margin-right: -20px;
+    margin-bottom: -10px;
+    margin-top:30px;
+    padding-right: 20px;
+   width: 100%;
+
+
+     .technigo img{
+        width: 70px;
+        display: flex;
+        justify-content: right;
+        margin-top: -10px;
+      }
+      
+    .text {
+        display: flex;
+        justify-content: space-evenly;
+        padding-top: 35px;
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 15px;
+        color: #3f3524;
+    
+      }
+    } 
+ 
+    }
+
+
+
+
+/* --------- END OF FOOTER SECTION ---------- */
+
+
+   
+}
+
+    
+
+
+   
+
