--- a/code/style.css
+++ b/code/style.css
@@ -211,7 +211,7 @@ header {
 @media (max-width: 480px){
  
 .grid-parent-head-news {
-    display: grid;
+    display: flex;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(1, 440px);
     gap:5px;
@@ -684,7 +684,7 @@ footer{
    width: 100%;
 
 
-     .technigo img{
+    .technigo img{
         width: 70px;
         display: flex;
         justify-content: right;
