--- a/code/style.css
+++ b/code/style.css
@@ -251,8 +251,8 @@ header {
     grid-column: span 1;
     margin-top: 10px;
     display: flex;
-    width: 60%;
-    height: 60%;
+    width: 294px;
+    height: 158px;
 
     
 }
@@ -684,7 +684,7 @@ footer{
    width: 100%;
 
 
-    .technigo img{
+     .technigo img{
         width: 70px;
         display: flex;
         justify-content: right;
