--- a/code/style.css
+++ b/code/style.css
@@ -251,7 +251,8 @@ header {
     grid-column: span 1;
     margin-top: 10px;
     display: flex;
-    height: 200px;
+    width: 200px;
+    height: 100px;
 
     
 }
