--- a/code/style.css
+++ b/code/style.css
@@ -250,7 +250,7 @@ header {
 .head-news-img {
     grid-column: span 1;
     margin-top: 10px;
-    display: flex;
+    display: grid;
     width: 200px;
     height: 100px;
 
