--- a/code/style.css
+++ b/code/style.css
@@ -221,7 +221,7 @@ header {
     padding-left: 30px;
     padding-right: 20px;
     margin-bottom:30px;
-    justify-content: center;
+   
    
 }
   
@@ -250,9 +250,10 @@ header {
 .head-news-img {
     grid-column: span 1;
     margin-top: 10px;
-    display: grid;
-    width: 200px;
-    height: 100px;
+    display: flex;
+    width: 50%;
+    height: 50%;
+    
 
     
 }
