--- a/code/style.css
+++ b/code/style.css
@@ -251,8 +251,8 @@ header {
     grid-column: span 1;
     margin-top: 10px;
     display: flex;
-    width: 50%;
-    height: 50%;
+    width: 300px;
+    height: 200px;
     
 
     
