--- a/code/style.css
+++ b/code/style.css
@@ -244,15 +244,15 @@ header {
 }
 .head-news-intro {
     font-size: 17px;
+    padding-right: 20px;
 
 }
 
 .head-news-img {
-    grid-column: span 1;
     margin-top: 10px;
     display: flex;
-    width: 300px;
-    height: 200px;
+    width: 50%;
+    height: 50%;
     
 
     
