--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,480 @@
-html {
-  background: #0025ff;
-  color: #fff;
+html,
+body,
+.container {
+  height: 100%;
+  margin: 0;
+  color: #6b705c;
+  font-family: 'manrope', Helvetica, Arial sans-serif;
+
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1em 1fr 1fr 1fr 1fr 1em;
+  grid-template-rows: minmax(10em, 15em) auto minmax(5em, 7em);
+  gap: 1em 1em;
+  grid-auto-flow: row;
+  grid-template-areas:
+    ". header header header header ."
+    ". main main main main ."
+    ". footer footer footer footer .";
+}
+
+.main {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  gap: 1em 1em;
+  grid-auto-flow: row;
+  grid-template-areas:
+    ". . . ."
+    ". . . ."
+    ". . . ."
+    ". . . .";
+  grid-area: main;
+}
+
+header {
+  padding: 1rem;
+  background-color: #cb997e;
+  grid-column: 1/7;
+  grid-row: 1;
+}
+
+
+.menuname>a:nth-child(1) {
+  visibility: hidden;
+}
+
+ul {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-end;
+  align-items: flex-end;
+  gap: 1em;
+}
+
+li {
+  list-style-type: none;
+}
+
+h1,
+h2 {
+  text-transform: uppercase;
+  font-family: 'Spectral', Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  text-decoration: none;
+}
+
+h1 {
+  font-weight: 600;
+}
+
+h2 {
+  color: #E29578;
+  font-weight: 200;
+}
+
+h3 {
+  font-weight: 700;
+  margin-bottom: -0.3em;
+}
+
+.navigation a {
+  color: #64564c;
+}
+
+.navigation a:hover {
+  color: #6b705cd8;
+  text-decoration: underline;
+}
+
+/*
+.navigation a {
+    color: #ffe8d6;
+    text-decoration: none;
+}
+
+.navigation a:hover {
+    color: #6b705cd8;
+    text-decoration: underline;
+}
+*/
+a {
+  color: #694f41;
+  text-decoration: none;
+}
+
+a:link {
+  color: #694f41;
+}
+
+a:focus {
+  text-decoration: none;
+}
+
+a:hover,
+a:active {
+  text-decoration: underline;
+  /*color: #a5a58d;*/
+  color: #ffe8d6;
+
+}
+
+.card {
+  flex-flow: column wrap;
+  justify-content: space-around;
+  align-content: center;
+  padding: 0 1em;
+  background-color: #fff7f1;
+  text-wrap: pretty;
+}
+
+.cover {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  object-position: 100% 0;
+}
+
+.cover:hover {
+  opacity: 0.6;
+}
+
+figure {
+  margin: 2rem 0;
+}
+
+figcaption {
+  font-family: 'Spectral', serif;
+  font-size: 0.7em;
+  font-weight: 300;
+  display: flex;
+  justify-content: flex-end;
+}
+
+
+footer {
+  background-color: #cb997e;
+  padding: 1rem 2rem;
+  font-size: 12px;
+  grid-column: 1/7;
+  grid-row: 3;
+}
+
+footer h2 {
+  color: #ffe8d6;
+  font-weight: 400;
+}
+
+
+
+/*hero styles */
+
+
+
+
+.card.hero {
+  grid-column: 1/4;
+  grid-row: 1/3;
+  height: 28em;
+  object-fit: cover;
+  object-position: 100% 5%;
+  float: left;
+  padding: 0 1em 5em 1em;
+
+
+}
+
+.hero figcaption {
+  font-size: 0.9em;
+  font-weight: 300;
+  justify-content: flex-start;
+
+
+}
+
+.hero h2 {
+  margin-top: -0.2em;
+  font-size: 4em;
+  margin-bottom: -0.3em;
+
+}
+
+.hero h3 {
+  margin-bottom: 1em;
+  font-size: 2em;
+
+}
+
+.hero p {
+  font-size: 1.2em;
+
+
+}
+
+.cover.hero {
+  width: 70%;
+  height: 30em;
+  object-fit: cover;
+  object-position: 100% 5%;
+  float: left;
+  padding: 1em;
+  margin: -2em 0 0 -1em;
+}
+
+
+/*runnerup styles*/
+.card.runnerup {
+  grid-column: 4/5;
+  grid-row: 1/3;
+}
+
+.cover.runnerup {
+  width: 100%;
+  /*height: 28em;*/
+  object-fit: cover;
+  object-position: 100% 5%;
+  padding: 1em;
+  margin-top: -1em;
+
+}
+
+
+.runnerup figcaption {
+  font-size: 0.8em;
+  font-weight: 300;
+  justify-content: flex-start;
+
+}
+
+.runnerup h2 {
+  margin: -0.5em 0 -0.3em 0;
+  font-size: 2.5em;
+}
+
+
+@media(min-width:768px) and (max-width:1024px) {
+
+  .main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    gap: 1em 1em;
+    grid-auto-flow: row;
+    grid-template-areas:
+      ". ."
+      ". ."
+      ". ."
+      ". .";
+    grid-area: main;
+  }
+
+  .card.hero {
+    grid-column: 1/3;
+    grid-row: 1;
+  }
+
+  .card.runnerup {
+    grid-column: 1/3;
+    grid-row: 2;
+  }
+
+  .hero figcaption {
+    font-size: 0.8em;
+
+
+  }
+
+
+
+  .hero h2 {
+    font-size: 4em;
+
+  }
+
+  .hero h3 {
+    font-size: 2em;
+
+  }
+
+  .hero p {
+    font-size: 1em;
+
+  }
+
+  .cover.hero {
+    width: 50%;
+    height: 31em;
+
+  }
+
+  .runnerup figcaption {
+    font-size: 0.8em;
+
+    /*float: right;*/
+  }
+
+  .cover.runnerup {
+    width: 50%;
+    float: right;
+    margin: -2em -1em 0 0;
+
+
+  }
+
+}
+
+
+
+@media(min-width:320px) and (max-width:767px) {
+  .container {
+    display: grid;
+    grid-template-columns: 0.1em 1fr 1fr 1fr 1fr 0.11em;
+    grid-template-rows: minmax(7em, 15em) auto minmax(5em, 7em);
+    gap: 1em 1em;
+    grid-auto-flow: row;
+    grid-template-areas:
+      ". header header header header ."
+      ". main main main main ."
+      ". footer footer footer footer .";
+  }
+
+
+  .main {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr (auto);
+    grid-template-rows: auto;
+    gap: 1em 1em;
+    grid-auto-flow: row;
+    grid-template-areas:
+      ". "
+      ". "
+      ". "
+      ". ";
+    grid-area: main;
+  }
+
+  .card.hero {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .card.runnerup {
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  .hero figcaption {
+    font-size: 0.8em;
+    float: right;
+    margin-top: -1em;
+
+  }
+
+  .hero h2 {
+    font-size: 2.5em;
+    padding-bottom: 0.2em;
+
+  }
+
+  .hero h3 {
+    font-size: 1.2em;
+
+  }
+
+  .hero p {
+    font-size: 1em;
+  }
+
+  .cover.hero {
+    width: 100%;
+    height: 15em;
+  }
+
+
+  .runnerup figcaption {
+    font-size: 0.8em;
+    float: right;
+    margin-top: -1em;
+  }
+
+  .cover.runnerup {
+    width: 100%;
+    float: right;
+    margin: -2em -1em 0em 1em;
+
+  }
+
+  .runnerup h2 {
+    padding-bottom: 0.2em;
+    font-size: 2.5em;
+  }
+
+  .menuname>a:nth-child(1) {
+    visibility: visible;
+
+  }
+
+  nav.navigation a {
+    display: flex;
+    justify-content: center;
+    height: 1.5rem;
+    text-decoration: none;
+    background-color: #cb997e;
+
+  }
+
+  nav.navigation h1 a:hover {
+    color: #ffe8d6;
+  }
+
+  nav.navigation a:visited {
+    background: #cb997e;
+    color: #64564c;
+  }
+
+
+
+
+  nav.navigation a:hover {
+    background: #ffe8d6;
+    color: #cb997e;
+    font-weight: 500;
+
+  }
+
+  nav.navigation ul {
+    padding: 0;
+  }
+
+
+  nav.navigation li {
+    width: 100vw;
+    text-align: center;
+    padding: 0;
+
+  }
+
+  nav.navigation li:hover .dropdown>li {
+    display: block;
+    top: 1rem;
+
+  }
+
+  .dropdown {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    background-color: #cb997e;
+    margin-left: -1rem;
+  }
+
+  .dropdown li {
+    display: none;
+    position: relative;
+  }
+
 }
