--- a/code/style.css
+++ b/code/style.css
@@ -36,46 +36,7 @@ nav{
   font-size: 1rem;
   background-color: #f4f2c3;
 }
-
-@media only screen and (max-width: 500px){
-  ul{
-    display:block;
-  }
-  #desktop-nav{
-    display:none;
-  }
-
-  #mobile-nav{
-    display: flex;
-  }
-  .big-news{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-content: center;
-    margin: 10px 20px 10px 20px;
-  }
-
-}
-
-@media (min-width: 501px) and (max-width: 768px) {
-  #desktop-nav{
-    display: none;
-  }
-  #mobile-nav{
-    display: flex;
-  }
-  ul{
-    grid-column: 1fr 1fr;
-  }
-}
-
-@media (min-width: 769px) and (max-width: 1200px) {
-  #mobile-nav{
-    display: none;
-  }
-}
-
+  
 .big-news{
   display: flex;
   flex-direction: row;
@@ -135,4 +96,51 @@ li>p{
   line-height: 1.2;
   padding: 20px 10px 20px 10px;
   justify-self: center;
+}
+
+@media only screen and (max-width: 500px){
+  ul{
+    display:block;
+  }
+  #desktop-nav{
+    display:none;
+  }
+
+  #mobile-nav{
+    display: flex;
+  }
+  .big-news{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    margin: 10px 20px 10px 20px;
+  }
+
+}
+
+@media (min-width: 501px) and (max-width: 768px) {
+  #desktop-nav{
+    display: none;
+  }
+  #mobile-nav{
+    display: flex;
+  }
+  ul{
+    grid-column: 1fr 1fr;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1200px) {
+  #mobile-nav{
+    display: none;
+  }
+}
+@media (min-width: 1201px) {
+  body{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+  }
 }
