--- a/code/style.css
+++ b/code/style.css
@@ -32,7 +32,6 @@ a {
   margin: 20px;
 }
 
-
 .navigation-bar {
   display: flex;
   flex-flow: row nowrap;
@@ -43,8 +42,7 @@ a {
 }
 
 .instagram-button {
-  background-color: rgb(193, 85, 139);
-  border: 1px solid rgb(250, 195, 146);
+  border: 3px solid rgb(193, 85, 139);
   border-radius: 5px;
   width: 120px;
   height: 95px;
@@ -58,18 +56,42 @@ footer {
   justify-content: flex-end;
 }
 
+.text {
+  display: flex;
+  flex-flow: column wrap;
+  margin: 5px;
+}
+
+/* I NEED HELP */
 .brainstorm-button {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 40px;
+  padding: 50px;
+  background-color: rgb(193, 85, 139);
+  color: rgb(255, 223, 158);
+  border: none;
+  font-size: 20px;
+  width: 200px;
+  height: 200px;
+}
+
+/* alt to brainstorm-button */
+/*display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /*font-size: 40px;
   border-radius: 5px;
   border: 1px solid rgb(250, 195, 146);
   background-color: rgb(193, 85, 139);
   color: rgb(255, 223, 158);
   padding: 10px;
-}
-
+  height: 100px;
+  width: 100px;
+  border: 20px solid rgb(193, 85, 139);
+  padding: 10px;}*/
 /*width: 300px;
   height: 300px;
   border-radius: 5px;
@@ -80,13 +102,33 @@ footer {
 }
 */
 
-.question-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 20px;
+.instagram-story-img {
+  display: none;
 }
 
+.mobile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.idea-button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-bottom: 40px solid black;
+  background-color: rgb(255, 255, 255);
+  color: black;
+  font-size: 20px;
+  height: 200px;
+  width: 200px;
+  padding: 10px;
+  margin-top: 10px;
+
+}
 
 /* Tablet */
 @media (min-width: 668px) {
@@ -97,6 +139,48 @@ footer {
     font-size: 90px;
     margin: 5px;
     padding: 5px;
+  }
+
+  .text {
+    margin-bottom: 30px;
+  }
+
+  .mobile {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 100%;
+    margin-bottom: 10px;
+  }
+
+  .instagram-story-img {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 10px;
+  }
+}
+
+@media (min-width: 1025px) {
+  .header h1 {
+    display: flex;
+    justify-content: flex-start;
+    color: rgb(193, 85, 139);
+    font-size: 90px;
+    margin: 5px;
+    padding: 5px;
+  }
+
+  .mobile {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: ;
+  }
+
+  .instagram-story-img {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 10px;
   }
 }
 
